feat: update security config, environment settings, and network/notification features